fixed overflow for create-post

--- a/src/app/add-post/create-post/create-post.component.scss
+++ b/src/app/add-post/create-post/create-post.component.scss
@@ -21,15 +21,15 @@ textarea {
     background-color: #fff; //height: 95%;
     margin: 10px;
     padding-top: 10px; //overflow: scroll; //height: 80%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 88vh;
 }
 
-// .comp::-webkit-scrollbar {
-//     width: 1px;
-//     /* remove scrollbar space */
-//     height: 1px;
-//     background: transparent;
-//     /* optional: just make scrollbar invisible */
-// }
+.comp::-webkit-scrollbar {
+    display: none;
+}
+
 img {
     width: 100%;
     height: auto;
